discussion/kv_engine/158438/158438_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove conversion from old style password file

isasl.pw is long gone and we've been using cbsaslpw.json since
the introduction of SCRAM authentication.

Remove the pre-generated password database and generate it in
the environment so that we can add new unit tests cases which
tewaks the password database and calls reload

Change-Id: I5efdf821fe718dbc2580f1fd6b771a23e04a4886

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-29 16:15:11.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 16:40:03.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38168/ : FAILURE

Link error: error LNK2019: unresolved external symbol "void __cdecl cb::sasl::pwdb::write_password_file(class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > const &,class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > const &)" (?write_password_file@pwdb@sasl@cb@@YAXAEBV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@0@Z) referenced in function "private: virtual void __cdecl EncryptedDatabaseTest_WriteReadFileEncrypted_Test::TestBody(void)" (?TestBody@EncryptedDatabaseTest_WriteReadFileEncrypted_Test@@EEAAXXZ) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38168/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10946/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:51:17: error: use of undeclared identifier "LOG_INFO" [clang-diagnostic-error]
                LOG_INFO("{} - Change {} from {} to unlimited",
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:56:17: error: use of undeclared identifier "LOG_INFO" [clang-diagnostic-error]
                LOG_INFO("{} - Change {} from {} to {}",
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10946/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:51:17:
error: use of undeclared identifier "LOG_INFO" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10946/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32542/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tenant.cc:51:17:
error: use of undeclared identifier "LOG_INFO"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32542/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/567/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/567/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13074/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13074/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12538/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12538/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11654/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11654/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12720/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12720/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20621/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/553/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/553/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9612/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
